src/main/java/com/example/demo/dto/errors/package-info.java
@NonNullApi
@NonNullFields
package com.example.demo.dto.errors;

import org.springframework.lang.NonNullApi;
import org.springframework.lang.NonNullFields;